Implement WalkSafe end-to-end feature set
Add email OTP accounts, integrated consent v1.1, post-login device checks, voice paths, reporting and raw-data lifecycles, deletion safeguards, incident recording, restore fences, Android user/admin flows, migrations, tests, and current planning documentation.